[package]
name = "canary"
version = "0.10.0"
authors = ["Anders Jensen <anders.c.jensen@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0"
log = "0.4"
env_logger = "0.7"

[profile.release]
panic = "abort"
lto = true
# removed parameters to reduce build time
# codegen-units = 1
# incremental = false